updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a senior at Penn State studying Economics.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Los Angeles, California</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love to cook, read, and dance.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Working in a fortune 500</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>California</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>to expand my skills</p>
     </section>
 
     <footer id="footer">
